<resources>
    <!-- Application -->
    <color name="holo_blue_light">#ff33b5e5</color>

    <!-- Math Alarm Activity -->
    <string name="app_name">Alice Alarm</string>
    <string name="title_activity_set_alarms">Set Alarm</string>
    <string name="no_alarms">No alarms have been set</string>

    <string name="button_new">New</string>

    <!-- Menu -->
    <string name="menu_item_new">New</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Cancel</string>
    <string name="menu_item_rate">Rate on Google Play</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_report">Report a Bug</string>

    <!-- Alert -->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">,</string>
    <string name="clear_button_text">Clear</string>
    <string name="minus_button_text">-</string>


    <color name="title_background_color">#000000</color>

    <string name="button_delete">Delete</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="question_01">내 기분은 내가 정해. 오늘은 ‘행복’이야.\n
    네가 정한 오늘의 기분은 뭐니 ?</string>
    <string name="question_02">나와 함께 모험을 해보지 않을래 ?</string>
    <string name="question_03">오늘은 무슨 꿈을 꿀거야 ?</string>
    <string name="question_04">가치있는 것을 하는데 있어서 늦었다는 건 없어.</string>
    <string name="question_05">기회를 놓치는 것이 기회일 수 있어.\n
    그러니 후회하지 않을거지 ?</string>
    <string name="question_06">고개를 쉽게 떨구지 마.\n
    고개를 들고 세상을 똑바로 봐.</string>
    <string name="question_07">흔들리지 않고 피는 꽃은 없어.\n
    넌 충분히 젊은 것 같은데 ?</string>
    <string name="question_08">습관을 조심해. 그게 네 운명이 될 수 있어.</string>
    <string name="question_09">인간에게는 미소가 필요해. 지금 당장 웃어봐 !</string>
    <string name="question_10">오늘 하루는 어떻게 보낼 셈이야 ?</string>
    <string name="question_11">해보지 않고는 무엇을 해낼 수 있는지 알 수 없어.</string>
    <string name="question_12">1분 전만큼 먼 시간은 없어. 똑 딱 똑 딱 ~</string>
    <string name="question_13">네 재산은 너의 노고에 달렸어. 좀 더 힘낼거지 ?</string>
    <string name="question_14">가장 뛰어난 예언자는 과거야.\n
    과거에게 물어봐. 이 길이 맞는지.</string>
    <string name="question_15">그래서, 너 자신에게\n
    가장 하고 싶은 말이 뭔데?</string>
    <string name="question_16">뭐 먹고 싶어 ?\n
    나는 구름 위의 무지개 !</string>
    <string name="question_17">내 행복 줄게. 가져갈래? 옛다</string>
    <string name="question_18">못생긴 얼굴 언제 필거야?\n
    으이구 일어나 아침이야.</string>
    <string name="question_19">야옹 ~ 안일어나면\n
    체셔 데리고 온다!</string>
    <string name="question_20">햇님이 나오신 것 같은데\n
    나랑 마중 나가지 않을래?</string>
    <string name="question_21">잘 사는 게 최고의 복수야 인간.</string>
    <string name="question_22">인간! 웃어봐 ~\n
    웃음은 최고의 안정제이자 진통제란다.</string>
    <string name="question_23"> 네 옆의 그 사람이 네 편이 아니어도\n
    햇살과 바람은 너의 편이야.</string>
    <string name="question_24">내가 보기엔 넌 꽤나 괜찮은 인간인 것 같은데?</string>

    <string name="answer_1">이제 일어날게</string>
    <string name="answer_2">토끼야 고마워</string>
    <string name="answer_3">오케이</string>
    <string name="answer_4">좋은 아침이다</string>
    <string name="answer_5">고마워 깨워줘서</string>
    <string name="answer_6">너 때문에 웃는다</string>


    <string name="rabbit_hello_1">당근 케이크 맛집 좀 알려줘</string>
    <string name="rabbit_hello_2">안녕? 방가워</string>
    <string name="rabbit_hello_3">뀨 ~ 기분좋다</string>
    <string name="rabbit_hello_4">똑-딱 시간아 흘러라</string>
    <string name="rabbit_hello_5">배고팡 !</string>
    <string name="rabbit_hello_6">지금 몇시지 ?</string>
    <string name="rabbit_hello_7">궁시렁 궁시렁</string>
    <string name="rabbit_hello_8">울 엄마는 잔소리쟁이야</string>
    <string name="rabbit_hello_9">체셔 무서워</string>
    <string name="rabbit_hello_10">꾸엑 그만 눌러</string>
    <string name="rabbit_hello_11">메롱 ~</string>
    <string name="rabbit_hello_12">내 애인은 태어났으려나 ?</string>
    <string name="rabbit_hello_13">인간들이란</string>
    <string name="rabbit_hello_14">난 밀당의 고수라규</string>
    <string name="rabbit_hello_15">너 어제 늦잠잤지 !</string>
    <string name="rabbit_hello_16">앨리스 ~ 나랑 놀자</string>
    <string name="rabbit_hello_17">나랑 놀자 응 ??</string>
    <string name="rabbit_hello_18">난 초록색을 좋아해</string>
    <string name="rabbit_hello_19">엣취 !</string>
    <string name="rabbit_hello_20">난 네가 한 일을 알고 있다</string>
    <string name="rabbit_hello_21">뭘 봐 ?</string>
    <string name="rabbit_hello_22">내가 여기 짱이야</string>
    <string name="rabbit_hello_23">오늘은 행운이 가득한 날</string>
    <string name="rabbit_hello_24">아 너무 씐나 !!!!</string>
    <string name="rabbit_hello_25">좋다......</string>
    <string name="rabbit_hello_26">흥 !</string>
    <string name="rabbit_hello_27">넌 어디서 왔니 ?</string>
    <string name="rabbit_hello_28">에잇 030</string>
    <string name="rabbit_hello_29">오늘 날씨 딱 내 스탈</string>
    <string name="rabbit_hello_30">둠칫 둠칫</string>
    <string name="rabbit_hello_31">티라미수 먹고싶어</string>
    <string name="rabbit_hello_32">앨리스는 뭐하고 있을까</string>


    <string name="card_name_clover">행운의 \nCLOVER</string>
    <string name="card_name_dia">승리의 \nDIAMOND</string>
    <string name="card_name_heart">사랑의 \nHEART</string>
    <string name="card_name_jack">꼼꼼한 \nJACK</string>
    <string name="card_name_joker">JOKER</string>
    <string name="card_name_king">다정한 \nKING</string>
    <string name="card_name_queen">지혜로운\nQUEEN</string>
    <string name="card_name_spade">최고의 \nSPADE</string>


    <string name="card_clover">오늘 너에게 다가오는 행운을\n 놓치지 말고 잡아봐!</string>
    <string name="card_dia">오늘 모든 일이 잘 풀리도록\n 자신에게 용기를 불어 넣어봐!</string>
    <string name="card_heart">오늘은 아끼는 사람에게\n 사랑한다고 말해봐!</string>
    <string name="card_jack">오늘 해야 할 것들을\n 내일의 나에게 미루지 말기!</string>
    <string name="card_joker">실수하지 않도록\n 한 번쯤은 의심해봐!</string>
    <string name="card_king">오늘은 친구들에게\n 칭찬 한 마디씩 해보는건 어때?</string>
    <string name="card_queen">따라 소리내서 말해봐.\n 내가 최고다!</string>
    <string name="card_spade">오늘 하루는 너가 주인공이\n 되어보는건 어때?</string>

</resources>
